<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <ImageView
            android:id="@+id/list_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/list_icon"
            android:paddingTop="8dp"
            app:srcCompat="@drawable/list_icon" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/bar_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/empty_location"
            android:layout_marginEnd="10dp"
            android:textAlignment="textEnd"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>