<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.zadanie.ui.fragments.BarsFragment">

    <data>

        <variable
            name="model"
            type="com.example.zadanie.ui.viewmodels.BarsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/sort_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/swiperefresh">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sortByName"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:drawableEnd="@drawable/sort"
                    android:text="@string/sort_name"
                    android:textStyle="bold"
                    android:shadowColor="@android:color/transparent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sortByPocet"
                    android:layout_width="match_parent"
                    android:textAlignment="textEnd"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/sort_numbers"
                    android:text="@string/sort_pocet"
                    android:shadowColor="@android:color/transparent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/sort_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.example.zadanie.ui.widget.barlist.BarsRecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:barItems="@{model.bars}"
            />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ImageView
            android:id="@+id/findBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/location"
            android:maxHeight="44dp"
            android:maxWidth="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/location_icon" />

        <View
            showTextToast="@{model.message}"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>